Deal with royal flush.

--- a/test.html
+++ b/test.html
@@ -11,25 +11,27 @@
   <script src="qunit.js"></script>
   <script src="poker.js"></script>
   <script>
-  test( "four of a kind test", function() {
-    var h = new Hand([0, 13, 26, 39, 4])
-    deepEqual(hand_to_text(h), 'AS AD AH AC 5S');
-    deepEqual(has_four_of_a_kind(h), [13, 4]);
-    deepEqual(has_straight_flush(h), undefined);
+  test( "royal flush", function() {
+    var h = new Hand([9, 10, 11, 12, 0])
+    deepEqual(hand_to_text(h), '10S JS QS KS AS');
+    deepEqual(has_royal_flush(h), [0]);
+    deepEqual(has_straight_flush(h), [13, 0]);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
-    deepEqual(has_flush(h), undefined);
-    deepEqual(has_straight(h), undefined);
+    deepEqual(has_flush(h), new Uint8Array([13, 12, 11, 10, 9]));
+    deepEqual(has_straight(h), [13]);
     deepEqual(has_three_of_a_kind(h), undefined);
     deepEqual(has_two_pair(h), undefined);
     deepEqual(has_pair(h), undefined);
-    deepEqual(has_nothing(h), undefined);
+    deepEqual(has_nothing(h), new Uint8Array([13, 12, 11, 10, 9]));
   });
 
   test( "straight flush", function() {
     var h = new Hand([0, 1, 2, 3, 4])
     deepEqual(hand_to_text(h), 'AS 2S 3S 4S 5S');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), [4, 0]);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), new Uint8Array([13, 4, 3, 2, 1]));
     deepEqual(has_straight(h), [4]);
@@ -39,11 +41,27 @@
     deepEqual(has_nothing(h), new Uint8Array([13, 4, 3, 2, 1]));
   });
 
+  test( "four of a kind", function() {
+    var h = new Hand([0, 13, 26, 39, 4])
+    deepEqual(hand_to_text(h), 'AS AD AH AC 5S');
+    deepEqual(has_royal_flush(h), undefined);
+    deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), [13, 4]);
+    deepEqual(has_full_house(h), undefined);
+    deepEqual(has_flush(h), undefined);
+    deepEqual(has_straight(h), undefined);
+    deepEqual(has_three_of_a_kind(h), undefined);
+    deepEqual(has_two_pair(h), undefined);
+    deepEqual(has_pair(h), undefined);
+    deepEqual(has_nothing(h), undefined);
+  });
+
   test( "full house test 1", function() {
     var h = new Hand([7, 20, 46, 9, 48])
     deepEqual(hand_to_text(h), '8S 8D 8C 10S 10C');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), [7, 9]);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -56,8 +74,9 @@
   test( "full house test 2", function() {
     var h = new Hand([7, 20, 48, 9, 35])
     deepEqual(hand_to_text(h), '8S 8D 10C 10S 10H');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), [9, 7]);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -70,8 +89,9 @@
   test( "flush test 1", function() {
     var h = new Hand([14, 17, 18, 22, 23]);
     deepEqual(hand_to_text(h), '2D 5D 6D 10D JD');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), new Uint8Array([10, 9, 5, 4, 1]));
     deepEqual(has_straight(h), undefined);
@@ -84,8 +104,9 @@
   test( "straight 1", function() {
     var h = new Hand([7, 8, 24, 23, 48])
     deepEqual(hand_to_text(h), '8S 9S QD JD 10C');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), [11]);
@@ -98,8 +119,9 @@
   test( "three of a kind 1", function() {
     var h = new Hand([7, 20, 33, 43, 45]);
     deepEqual(hand_to_text(h), '8S 8D 8H 5C 7C');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -112,8 +134,9 @@
   test( "two pair 1", function() {
     var h = new Hand([7, 4, 33, 43, 45]);
     deepEqual(hand_to_text(h), '8S 5S 8H 5C 7C');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -126,8 +149,9 @@
   test( "pair 1", function() {
     var h = new Hand([7, 4, 33, 44, 45]);
     deepEqual(hand_to_text(h), '8S 5S 8H 6C 7C');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -140,8 +164,9 @@
   test( "unknown 1", function() {
     var h = new Hand([48, 49, 16, 40, 1]);
     deepEqual(hand_to_text(h), '10C JC 4D 2C 2S');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -154,8 +179,9 @@
   test( "unknown 2", function() {
     var h = new Hand([26, 19, 39, 27, 40]);
     deepEqual(hand_to_text(h), 'AH 7D AC 2H 2C');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -168,8 +194,9 @@
   test( "unknown 3", function() {
     var h = new Hand([3, 17, 42, 16, 29]);
     deepEqual(hand_to_text(h), '4S 5D 4C 4D 4H');
-    deepEqual(has_four_of_a_kind(h), [3, 4]);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), [3, 4]);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
@@ -182,8 +209,9 @@
   test( "unknown 4", function() {
     var h = new Hand([0, 23, 40, 1, 27]);
     deepEqual(hand_to_text(h), 'AS JD 2C 2S 2H');
-    deepEqual(has_four_of_a_kind(h), undefined);
+    deepEqual(has_royal_flush(h), undefined);
     deepEqual(has_straight_flush(h), undefined);
+    deepEqual(has_four_of_a_kind(h), undefined);
     deepEqual(has_full_house(h), undefined);
     deepEqual(has_flush(h), undefined);
     deepEqual(has_straight(h), undefined);
