--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div id="hand1"></div>
   <table>
     <tr><th>Hand</th><th>Count</th></tr>
+    <tr><td>Royal Flush</td><td id="t0"></td></tr>
     <tr><td>Straight Flush</td><td id="t1"></td></tr>
     <tr><td>Four of a kind</td><td id="t2"></td></tr>
     <tr><td>Full House</td><td id="t3"></td></tr>
@@ -65,6 +66,7 @@ hand.pop_card();
 document.getElementById("hand1").innerHTML = hand_to_text(hand);
 
 var hand_f_list = [
+  has_royal_flush,
   has_straight_flush,
   has_four_of_a_kind,
   has_full_house,
@@ -78,8 +80,8 @@ var hand_f_list = [
 
 var totals = find_hand_count(hand, hand_f_list, 5, deck, 5);
 var i;
-for (i=0; i<9; i++) {
-  document.getElementById("t" + (i+1)).innerHTML = "" + totals[i];
+for (i=0; i<10; i++) {
+  document.getElementById("t" + i).innerHTML = "" + totals[i];
 }
 
 </script>
