--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
   <script src="poker.js"></script>
 </head>
 <body>
-  <div id="hand"></div>
-  <br>
-  <div id="hand1"></div>
+  <table border="1px"><tr>
+    <td><div id="card_0"></div><br><input type="checkbox" id="discard0" checked="checked"></td>
+    <td><div id="card_1"></div><br><input type="checkbox" id="discard1" checked="checked"></td>
+    <td><div id="card_2"></div><br><input type="checkbox" id="discard2" checked="checked"></td>
+    <td><div id="card_3"></div><br><input type="checkbox" id="discard3" checked="checked"></td>
+    <td><div id="card_4"></div><br><input type="checkbox" id="discard4" checked="checked"></td>
+  </tr></table>
   <table>
-    <tr><th>Hand</th><th>Count</th></tr>
-    <tr><td>Royal Flush</td><td id="t0"></td></tr>
-    <tr><td>Straight Flush</td><td id="t1"></td></tr>
-    <tr><td>Four of a kind</td><td id="t2"></td></tr>
-    <tr><td>Full House</td><td id="t3"></td></tr>
-    <tr><td>Flush</td><td id="t4"></td></tr>
-    <tr><td>Straight</td><td id="t5"></td></tr>
-    <tr><td>Three of a Kind</td><td id="t6"></td></tr>
-    <tr><td>Two Pair</td><td id="t7"></td></tr>
-    <tr><td>Pair</td><td id="t8"></td></tr>
-    <tr><td>Nothing</td><td id="t9"></td></tr>
+    <tr><th>Hand</th><th>Value</th><th>Count</th></tr>
+    <tr><td>Royal Flush</td><td>0</td><td id="t0"></td></tr>
+    <tr><td>Straight Flush</td><td>0</td><td id="t1"></td></tr>
+    <tr><td>Four of a kind</td><td>0</td><td id="t2"></td></tr>
+    <tr><td>Full House</td><td>0</td><td id="t3"></td></tr>
+    <tr><td>Flush</td><td>0</td><td id="t4"></td></tr>
+    <tr><td>Straight</td><td>0</td><td id="t5"></td></tr>
+    <tr><td>Three of a Kind</td><td>0</td><td id="t6"></td></tr>
+    <tr><td>Two Pair</td><td>0</td><td id="t7"></td></tr>
+    <tr><td>Jacks or Better</td><td>0</td><td id="t8"></td></tr>
+    <tr><td>Pair</td><td>0</td><td id="t9"></td></tr>
+    <tr><td>Nothing</td><td>0</td><td id="t10"></td></tr>
   </table>
 </body>
 <script>
@@ -53,17 +58,23 @@ function shuffle_deck() {
   return deck;
 }
 
-var deck = shuffle_deck();
-var hand = new Hand(deck.slice(0, 5));
+function show_hand(hand) {
+  var i;
+  for (i=0; i<hand.cards.length; i++) {
+    var c = hand.cards[i];
+    var t = card_to_text(c);
+    document.getElementById("card_" + i).innerHTML = t;
+  }
+}
 
-document.getElementById("hand").innerHTML = hand_to_text(hand);
-
-hand.pop_card();
-hand.pop_card();
-hand.pop_card();
-hand.pop_card();
-
-document.getElementById("hand1").innerHTML = hand_to_text(hand);
+function has_jacks_or_better(hand) {
+  var v = has_pair(hand);
+  if (v !== undefined) {
+    if (v[0]>=10) {
+      return v;
+    }
+  }
+}
 
 var hand_f_list = [
   has_royal_flush,
@@ -74,15 +85,47 @@ var hand_f_list = [
   has_straight,
   has_three_of_a_kind,
   has_two_pair,
+  has_jacks_or_better,
   has_pair,
   has_nothing,
 ];
 
-var totals = find_hand_count(hand, hand_f_list, 5, deck, 5);
-var i;
-for (i=0; i<10; i++) {
-  document.getElementById("t" + i).innerHTML = "" + totals[i];
+function update_table(hand, deck) {
+  var i;
+  var totals = find_hand_count(hand, hand_f_list, 5, deck, 5);
+  for (i=0; i<hand_f_list.length; i++) {
+    document.getElementById("t" + i).innerHTML = "" + totals[i];
+  }
 }
+
+function make_subhand(hand) {
+  var new_hand = new Hand([]);
+  new_hand.add_cards([hand.cards[0], hand.cards[2], hand.cards[4]]);
+  return new_hand;
+}
+
+var deck = shuffle_deck();
+var hand = new Hand(deck.slice(0, 5));
+
+function recalculate() {
+  var new_hand = new Hand([]);
+  for (i=0;i<5;i++) {
+    if (document.getElementById("discard" + i).checked) {
+      new_hand.add_cards([hand.cards[i]]);
+    }
+  }
+  update_table(new_hand, deck);
+}
+
+function note_events() {
+  var i;
+  for (i=0;i<5;i++) {
+    document.getElementById("discard" + i).onclick = recalculate;
+  }
+}
+
+note_events();
+show_hand(hand);
 
 </script>
 </html>
