--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="poker.css" media="all" />
-  <script src="poker.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/poker.css" media="all" />
+  <script src="js/poker.js"></script>
 </head>
 <body>
   <table border="1px">
