--- a/test.html
+++ b/test.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>QUnit basic example</title>
-  <link rel="stylesheet" href="qunit.css">
+  <link rel="stylesheet" href="css/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="qunit.js"></script>
-  <script src="poker.js"></script>
+  <script src="js/qunit.js"></script>
+  <script src="js/poker.js"></script>
   <script>
   test( "royal flush", function() {
     var h = new Hand([9, 10, 11, 12, 0])
