Next iteration. Kind of useful already!

--- a/index.html
+++ b/index.html
@@ -19,122 +19,7 @@
       <td><input type="checkbox" id="discard3" checked="checked"></td>
       <td><input type="checkbox" id="discard4" checked="checked"></td>
   </tr></table>
-  <table>
-    <tr><th>Hand</th><th>Value</th><th>Count</th></tr>
-    <tr><td>Royal Flush</td><td>0</td><td id="t0"></td></tr>
-    <tr><td>Straight Flush</td><td>0</td><td id="t1"></td></tr>
-    <tr><td>Four of a kind</td><td>0</td><td id="t2"></td></tr>
-    <tr><td>Full House</td><td>0</td><td id="t3"></td></tr>
-    <tr><td>Flush</td><td>0</td><td id="t4"></td></tr>
-    <tr><td>Straight</td><td>0</td><td id="t5"></td></tr>
-    <tr><td>Three of a Kind</td><td>0</td><td id="t6"></td></tr>
-    <tr><td>Two Pair</td><td>0</td><td id="t7"></td></tr>
-    <tr><td>Jacks or Better</td><td>0</td><td id="t8"></td></tr>
-    <tr><td>Pair</td><td>0</td><td id="t9"></td></tr>
-    <tr><td>Nothing</td><td>0</td><td id="t10"></td></tr>
-  </table>
+  <span id="paytable"></span>
 </body>
-<script>
-function shuffle(array) {
-  var currentIndex = array.length
-    , temporaryValue
-    , randomIndex
-    ;
-
-  // While there remain elements to shuffle...
-  while (0 !== currentIndex) {
-
-    // Pick a remaining element...
-    randomIndex = Math.floor(Math.random() * currentIndex);
-    currentIndex -= 1;
-
-    // And swap it with the current element.
-    temporaryValue = array[currentIndex];
-    array[currentIndex] = array[randomIndex];
-    array[randomIndex] = temporaryValue;
-  }
-
-  return array;
-}
-
-function shuffle_deck() {
-  var deck = [];
-  var i;
-  for (i=0; i<52; i++) {
-    deck.push(i);
-  }
-  shuffle(deck);
-  return deck;
-}
-
-function show_hand(hand) {
-  var i;
-  for (i=0; i<hand.cards.length; i++) {
-    var c = hand.cards[i];
-    var t = card_to_text(c);
-    document.getElementById("card_" + i).innerHTML = '<img src="./img/' + t + '.svg" class="crop" />';
-  }
-}
-
-function has_jacks_or_better(hand) {
-  var v = has_pair(hand);
-  if (v !== undefined) {
-    if (v[0]>=10) {
-      return v;
-    }
-  }
-}
-
-var hand_f_list = [
-  has_royal_flush,
-  has_straight_flush,
-  has_four_of_a_kind,
-  has_full_house,
-  has_flush,
-  has_straight,
-  has_three_of_a_kind,
-  has_two_pair,
-  has_jacks_or_better,
-  has_pair,
-  has_nothing,
-];
-
-function update_table(hand, deck) {
-  var i;
-  var totals = find_hand_count(hand, hand_f_list, 5, deck, 5);
-  for (i=0; i<hand_f_list.length; i++) {
-    document.getElementById("t" + i).innerHTML = "" + totals[i];
-  }
-}
-
-function make_subhand(hand) {
-  var new_hand = new Hand([]);
-  new_hand.add_cards([hand.cards[0], hand.cards[2], hand.cards[4]]);
-  return new_hand;
-}
-
-var deck = shuffle_deck();
-var hand = new Hand(deck.slice(0, 5));
-
-function recalculate() {
-  var new_hand = new Hand([]);
-  for (i=0;i<5;i++) {
-    if (document.getElementById("discard" + i).checked) {
-      new_hand.add_cards([hand.cards[i]]);
-    }
-  }
-  update_table(new_hand, deck);
-}
-
-function note_events() {
-  var i;
-  for (i=0;i<5;i++) {
-    document.getElementById("discard" + i).onclick = recalculate;
-  }
-}
-
-note_events();
-show_hand(hand);
-
-</script>
+<script src="js/index.js"></script>
 </html>
