Get keyboard events working.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/poker.css" media="all" />
   <script src="js/poker.js"></script>
+  <script src="js/mousetrap.min.js"></script>
 </head>
 <body>
   <table border="1px">
@@ -13,11 +14,11 @@
       <td><div id="card_4"></div></td>
     </tr>
     <tr>
-      <td><input type="checkbox" id="discard0" checked="checked"></td>
-      <td><input type="checkbox" id="discard1" checked="checked"></td>
-      <td><input type="checkbox" id="discard2" checked="checked"></td>
-      <td><input type="checkbox" id="discard3" checked="checked"></td>
-      <td><input type="checkbox" id="discard4" checked="checked"></td>
+      <td><input type="checkbox" id="discard0" checked="checked">1</td>
+      <td><input type="checkbox" id="discard1" checked="checked">2</td>
+      <td><input type="checkbox" id="discard2" checked="checked">3</td>
+      <td><input type="checkbox" id="discard3" checked="checked">4</td>
+      <td><input type="checkbox" id="discard4" checked="checked">5</td>
   </tr></table>
   <span id="paytable"></span>
 </body>
